--- a/views/index.html
+++ b/views/index.html
@@ -36,7 +36,7 @@
                 <div class="navbar">
                     <div class="navbar-bg"></div>
                     <div class="navbar-inner justify-content-center">
-                        <div class="title ">Resgitra aí Boy</div>
+                        <div class="title ">Registra aí Boy</div>
                     </div>
                 </div>
 
