--- a/www/css/home.css
+++ b/www/css/home.css
@@ -7,7 +7,12 @@
     overflow: auto; /* Adiciona a barra de rolagem quando necessário */
     padding: 5px; /* Adicione algum preenchimento se necessário */
 }
-
+h4 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    color: #073261;
+}
 .block {
     background-color: #fff;
     padding: 20px;
@@ -18,6 +23,23 @@
     max-width: 600px;
     overflow: auto; /* Adiciona a barra de rolagem quando necessário */
     margin: 120px auto; /* Centraliza o bloco horizontalmente */
+
+}
+.title{
+    color: #fff;
+    font-family: "Poppins", sans-serif;
+    font-weight: 1000;
+    font-style: normal;
+    font-size: 24px;
+}
+
+h2{
+ 
+    color: #073261;
+    font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
 
 }
 #block-registrados {
@@ -48,17 +70,23 @@ input[type="text"] {
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 16px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
 
 button {
     padding: 10px 20px;
     border: none;
     border-radius: 10px;
-    background-color: #007bff;
+    background-color: #073261;
     color: #fff;
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
 
 button:hover {
@@ -81,22 +109,20 @@ input[type="text"] {
     padding: 10px;
     margin-top: 5px;
     margin-bottom: 20px;
-    border: 2px solid #2196F3;
+    border: 2px solid #073261;
     border-radius: 10px;
     font-size: 16px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
 .navbar-bg{
-    background-color: #2196F3;
+    background-color: #073261;
     color: #fff;
     font-weight:bold;    
 
 }
-.title{
-    color: #fff;
-    font-size: 20px;
-    font-weight:bold;    
 
-}
 .view{
     overflow: auto; /* Adiciona a barra de rolagem quando necessário */
  
@@ -130,6 +156,9 @@ input[type="text"] {
 
 #label-contrato, #input-contrato, #label-nome, #input-nome {
     width: 100%; /* Necessário para garantir que os elementos preencham suas colunas */
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
 .container-nome {
     display: grid;
@@ -196,7 +225,7 @@ input[type="text"] {
     width: auto;
     height: 2px;
     background-color: #f0f0f0;
-    border: 2px solid #2196F3;
+    border: 2px solid #073261;
     border-radius: 10px; /* Aqui você define o arredondamento das bordas */
     padding: 15px;
     text-align: center;
@@ -205,6 +234,10 @@ input[type="text"] {
     display: flex; /* Define o contêiner como um contêiner flexível */
     justify-content: center; /* Centraliza o conteúdo horizontalmente */
     align-items: center; /* Centraliza o conteúdo verticalmente */
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    color: #073261;
 }
 
 .user-info {
@@ -219,6 +252,9 @@ input[type="text"] {
   
   .user-info .username {
     margin-left: 5px; /* Espaçamento entre o nome do usuário e o ícone */
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: normal;
   }
   
   #icone-user {
@@ -231,9 +267,9 @@ input[type="text"] {
   }
 
   .card {
-    background-color: #2196F3;
+    background-color: #073261;
     /* Um tom de azul claro */
-    border: 1px solid #007bff;  /* Azul mais escuro para o contorno */
+    border: 1px solid #1565c0;  /* Azul mais escuro para o contorno */
     border-radius: 8px;
     padding: 16px;
     margin: 4px;
@@ -242,10 +278,13 @@ input[type="text"] {
     width: calc(50% - 16px); /* Para tornar o card responsivo, definimos a largura como 50% da largura do contêiner pai, com 16px de margem em cada lado */
     box-sizing: border-box; /* Para incluir a largura da borda no cálculo da largura total */
     color: white;
-    font-weight: bold;
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
 .username::first-letter {
     text-transform: uppercase;
+  
 }
 
 .card:hover {
@@ -254,7 +293,7 @@ input[type="text"] {
 }
 
 .card.selected {
-    background-color: #90caf9; /* Um tom de azul mais escuro para cartões selecionados */
+    background-color: #1565c0; /* Um tom de azul mais escuro para cartões selecionados */
     border: 1px solid #e3f2fd;  /* Azul mais escuro para o contorno */
 
 }
@@ -299,7 +338,7 @@ input[type="text"] {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     z-index: 1000;
     display: none;
-    border: 2px solid #007bff;  /* Azul mais escuro para o contorno */
+    border: 2px solid #073261;  /* Azul mais escuro para o contorno */
     font-weight: bold;
     font-size: 18px;
 
@@ -307,7 +346,7 @@ input[type="text"] {
   
 
 .close-button {
-    background-color: #2196F3;
+    background-color: #073261;
     border: none;
     color: white;
     padding: 5px 10px;
@@ -322,6 +361,11 @@ input[type="text"] {
 
 .message-text {
     margin-right: 10px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    color: #073261;
+
 }
 
 /* Estilos para o spinner de carregamento */
@@ -334,7 +378,7 @@ input[type="text"] {
     width: 50px;
     height: 50px;
     border: 5px solid #f3f3f3; /* Cinza claro */
-    border-top: 5px solid #3498db; /* Azul */
+    border-top: 5px solid #073261; /* Azul */
     border-radius: 50%;
     animation: spin 1s linear infinite; /* Animação de rotação */
   }
@@ -347,18 +391,22 @@ input[type="text"] {
 .result-container {
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 2px;
     margin-top: 20px;
 }
 .result-row {
     display: flex;
     justify-content: space-between;
-    border: 2px solid #2196F3;
+    border: 2px solid #073261;
     border-radius: 10px;
     padding: 5px;
     padding-top: 20px;
     padding-bottom: 10px;
     cursor: pointer; /* Altera o cursor para indicar que o elemento é clicável */
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    color: #073261;
 
 }
 .result-row:hover{
@@ -371,7 +419,7 @@ input[type="text"] {
     flex: 2;
 }
 .result-item span {
-    font-weight: bold;
+    font-weight: 900;
 }
 
 #popup-dados-registro {
@@ -381,12 +429,17 @@ input[type="text"] {
     top: 50%;
     transform: translate(-50%, -50%);
     background-color: white;
-    border: 2px solid #2196F3;
+    border: 2px solid #073261;
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     z-index: 1000;
     width: 90%;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    color: #073261;
+    
 }
 .popup-content {
     margin-bottom: 10px;
@@ -397,7 +450,7 @@ input[type="text"] {
     text-align: center;
     cursor: pointer;
     color: white;
-    background-color: #2196F3;
+    background-color: #073261;
     width: 30px;
     height: 30px;
     line-height: 30px;
@@ -411,9 +464,13 @@ input[type="text"] {
  #dataInput {
     margin-top: 20px;
     margin-bottom: 30px; /* Espaçamento abaixo */
-    margin-left: 70%;
-    border: 2px solid #2196F3;
+    margin-left: 60%;
+    border: 2px solid #073261;
     padding: 10px;
     border-radius: 10px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    color: #073261;
 
 }
