--- a/www/css/index.css
+++ b/www/css/index.css
@@ -30,7 +30,10 @@ body {
 
 h2 {
     margin-bottom: 1.5rem;
-    color: #333;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    color: #073261;
 }
 
 .input-group {
@@ -44,6 +47,10 @@ input[type="password"] {
     border: 1px solid #ddd;
     border-radius: 4px;
     font-size: 1rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    color: #073261;
 }
 
 input[type="submit"] {
@@ -51,11 +58,14 @@ input[type="submit"] {
     padding: 0.75rem;
     border: none;
     border-radius: 4px;
-    background-color: #007BFF;
+    background-color: #073261;
     color: white;
     font-size: 1rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
 }
 
 input[type="submit"]:hover {
@@ -72,13 +82,16 @@ input::placeholder {
     }
 }
 .navbar-bg{
-    background-color: #2196F3;
+    background-color: #073261;
     color: #fff;
+
    
 
 }
 .title{
     color: #fff;
-    font-size: 20px;
-    font-weight:900px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 1500;
+    font-style: normal;
+    font-size: 24px;
 }
