--- a/www/css/personalizado.css
+++ b/www/css/personalizado.css
@@ -1,6 +1,6 @@
 .toolbar{
     height: 80px;
-    background-color: #2196F3;
+    background-color: #073261;
     position: fixed;
 
 }
@@ -19,14 +19,18 @@
 }
 
 .toolbar-inner .link:not(.active) {
-    color:#04243f;
-    font-weight: normal;
+    color:black;
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
 
 /* Estilos para o link ativo */
 .toolbar-inner .link.active {
     color: white; /* Define a cor do texto como branco */
-    font-weight: bold; /* Mantém o texto em negrito */
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
 
 
