--- a/www/css/index.css
+++ b/www/css/index.css
@@ -44,8 +44,8 @@ input[type="text"],
 input[type="password"] {
     width: 100%;
     padding: 0.75rem;
-    border: 1px solid #ddd;
-    border-radius: 4px;
+    border: 2px solid #073261;
+    border-radius: 5px;
     font-size: 1rem;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
