--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <!-- Required meta tags-->
     <meta charset="utf-8">
@@ -21,6 +21,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
        
         <link
             href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap"
@@ -77,7 +79,7 @@
            
 
                   <div class="container-buscar-contrato">
-                  <input type="text" id="contractNumber" placeholder="Digite o número do contrato">
+                  <input type="text" id="contractNumber" placeholder="XXXXXX">
                   <button id="searchButton">Buscar</button>
                 </div>
                   <div class="container-dados-cliente">
@@ -182,6 +184,7 @@
   
 
 </div>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <!-- Path to Framework7 Library Bundle JS-->
 <script type="text/javascript" src="lib/framework7-bundle.min.js"></script>
