--- a/www/css/home.css
+++ b/www/css/home.css
@@ -25,6 +25,16 @@ h4 {
     margin: 120px auto; /* Centraliza o bloco horizontalmente */
 
 }
+#block-painel-registrados{
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    width: 80%;
+    overflow: auto; /* Adiciona a barra de rolagem quando necessário */
+    margin: 120px auto; /* Centraliza o bloco horizontalmente */
+}
 .title{
     color: #fff;
     font-family: "Poppins", sans-serif;
@@ -46,17 +56,13 @@ h2{
   
     margin-top: -100px;
 }
-/*.h2-registrados {
-    margin-right: 60%;
-}
-*/
+
 #h2-registrados-buscar{
-    margin-right: 60%;
+    margin-right: 150px;
 
 }
 #h2-registrados-registrados{
-    margin-right: 50%;
-
+    margin-right: 80px;
 }
 h1 {
     margin-bottom: 20px;
@@ -245,7 +251,9 @@ input[type="text"] {
     align-items: center; /* Centraliza verticalmente os elementos */
     justify-content: end; /* Alinha as colunas à esquerda */
     padding: 20px;
-    font-size: 16px; /* Tamanho do ícone */
+    font-size: 10px; /* Tamanho do ícone */
+    margin-top: 10px;
+    margin-left: -20px;
 
 
   }
@@ -269,7 +277,7 @@ input[type="text"] {
   .card {
     background-color: #073261;
     /* Um tom de azul claro */
-    border: 1px solid #1565c0;  /* Azul mais escuro para o contorno */
+    border: 1px solid #073261;  /* Azul mais escuro para o contorno */
     border-radius: 8px;
     padding: 16px;
     margin: 4px;
@@ -294,7 +302,7 @@ input[type="text"] {
 
 .card.selected {
     background-color: #1565c0; /* Um tom de azul mais escuro para cartões selecionados */
-    border: 1px solid #e3f2fd;  /* Azul mais escuro para o contorno */
+    border: 1px solid #1565c0;  /* Azul mais escuro para o contorno */
 
 }
 
@@ -326,7 +334,11 @@ input[type="text"] {
     .card {
         width: calc(25% - 4px); /* Para telas maiores, os cartões ocupam 25% da largura do contêiner pai, com 16px de margem em cada lado */
     }
+    .title{
+        justify-self: start;
+    }
 }
+
 .custom-message {
     position: fixed;
     top: 40%;
@@ -415,11 +427,43 @@ input[type="text"] {
 .result-item {
     flex: 1;
 }
+.result-data{
+    flex: 1;
+ 
+}
+
 .result-item-name {
     flex: 2;
 }
+.result-icon{
+    flex: 0;
+}
+
+.result-item-obsercacao{
+    text-align: start;
+    flex: 3;
+
+}
+
 .result-item span {
     font-weight: 900;
+}
+.sweetalert-font {
+    font-size: 16px; /* Ajusta o tamanho da fonte */
+    font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.btn-arredondado {
+    border-radius: 10px; /* Ajusta o raio das bordas dos botões */
+    /* Outros estilos personalizados, se necessário */
+}
+
+.sweetalert-container {
+    border: 2px solid #073261; /* Adiciona uma borda à janela */
+    /* Outros estilos personalizados, se necessário */
 }
 
 #popup-dados-registro {
@@ -434,7 +478,7 @@ input[type="text"] {
     padding: 20px;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     z-index: 1000;
-    width: 90%;
+    width: 80%;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-style: normal;
@@ -464,7 +508,8 @@ input[type="text"] {
  #dataInput {
     margin-top: 20px;
     margin-bottom: 30px; /* Espaçamento abaixo */
-    margin-left: 60%;
+    margin-left: 55%;
+    left: 50%;
     border: 2px solid #073261;
     padding: 10px;
     border-radius: 10px;
@@ -472,5 +517,26 @@ input[type="text"] {
     font-weight: 500;
     font-style: normal;
     color: #073261;
+}
+#data-input-painel{
+    margin-top: 20px;
+    margin-bottom: 30px; /* Espaçamento abaixo */
+    margin-left: 85%;
+    border: 2px solid #073261;
+    padding: 10px;
+    border-radius: 10px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 18px;
+    color: #073261;
+}
+.result-item i{
+    display: block;
+    text-align: center;
+    cursor: pointer;
+    color:  #073261;
+    font-size: 25px;
+    line-height: 30px;
 
 }
