--- a/views/home.html
+++ b/views/home.html
@@ -79,7 +79,7 @@
            
 
                   <div class="container-buscar-contrato">
-                  <input type="text" id="contractNumber" placeholder="XXXXXX">
+                  <input type="text" id="contractNumber" placeholder="Contrato/CPF">
                   <button id="searchButton">Buscar</button>
                 </div>
                   <div class="container-dados-cliente">
