--- a/views/controle-registros.html
+++ b/views/controle-registros.html
@@ -99,7 +99,7 @@
     <script>
         function init(){
         const spreadsheetId = '1qANHDNI6jSHg5JX1hWzLKqW5I2Hohe792ZNOjhcDOQM';
-        const range = 'A1:N'; // Substitua pelo intervalo de células onde deseja pesquisar
+        const range = 'A1:W'; // Substitua pelo intervalo de células onde deseja pesquisar
         function atualizarDataInput(id) {
             // Obter o elemento de input de data
             const dataInput = document.getElementById(id);
