--- a/views/registrados.html
+++ b/views/registrados.html
@@ -140,7 +140,7 @@
 
 function initialize() {
     const spreadsheetId = '1qANHDNI6jSHg5JX1hWzLKqW5I2Hohe792ZNOjhcDOQM';
-    const range = 'A1:N'; // Substitua pelo intervalo de células onde deseja pesquisar
+    const range = 'A1:Z'; // Substitua pelo intervalo de células onde deseja pesquisar
     const dataInput = document.getElementById('dataInput');
     atualizarDataInput('dataInput');
     // Definir data atual no input de data
