--- a/www/css/home.css
+++ b/www/css/home.css
@@ -409,6 +409,23 @@ input[type="text"] {
 .result-row {
     display: flex;
     justify-content: space-between;
+    justify-content: space-between;
+    border: 2px solid #073261;
+    border-radius: 10px;
+    padding: 5px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    cursor: pointer; /* Altera o cursor para indicar que o elemento é clicável */
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    color: #073261;
+
+}
+.result-row-painel {
+    display: grid;
+    grid-template-columns: 10% 2% 25% 20% 25% 25%;
+    justify-content: space-between;
     border: 2px solid #073261;
     border-radius: 10px;
     padding: 5px;
@@ -521,9 +538,9 @@ input[type="text"] {
 #data-input-painel{
     margin-top: 20px;
     margin-bottom: 30px; /* Espaçamento abaixo */
-    margin-left: 85%;
     border: 2px solid #073261;
     padding: 10px;
+     margin-left: 80%;
     border-radius: 10px;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
