--- a/views/home.html
+++ b/views/home.html
@@ -87,59 +87,83 @@
             </div>
             <div class="container-dados-cliente">
               <div class="container-contrato">
+                <div class="input-group" >
                 <h4>Contrato:</h4>
-                <div class="rounded-div">
+                <div class="rounded-div" id = "contrato">
                   <span id="output-contrato"></span>
                 </div>
+                </div>
+                <div class="input-group">
                 <h4>Cliente:</h4>
-                <div class="rounded-div">
+                <div class="rounded-div" id = "cliente">
                   <span id="output-cliente"></span>
+                </div>
                 </div>
               </div>
               <div class="container-nome">
-
-                <h4>Nome:</h4>
-                <div class="rounded-div">
+                <div class="input-group">
+                <h4 id = "label-nome">Nome:</h4>
+                <div class="rounded-div" id = "nome">
                   <span id="output-nome"></span>
+                </div>
                 </div>
 
               </div>
               <div class="container-endereco">
-                <h4>Endereço:</h4>
-                <div class="rounded-div">
+                <div class="input-group">
+                <h4 id = "label-endereco">Endereço:</h4>
+                <div class="rounded-div" id = "endereco">
                   <span id="output-endereco"></span>
                 </div>
-
+</div>
               </div>
               <div class="container-bairro">
+                <div class="input-group">
                 <h4>Bairro:</h4>
-                <div class="rounded-div">
+                <div class="rounded-div" id = "bairro">
                   <span id="output-bairro"></span>
                 </div>
+                </div>
+                <div class="input-group">
                 <h4>Telefone:</h4>
-                <div class="rounded-div">
+                <div class="rounded-div" id = "telefone">
                   <span id="output-telefone"></span>
+                </div>
                 </div>
               </div>
               <div class="container-forma-de-pagamento">
-                <h4>F.Pagamento:</h4>
-                <div class="rounded-div">
-                  <span id="output-forma-de-pagamento"></span>
+                <div class="input-group">
+                  <h4>F.Pagamento:</h4>
+                  <div class="rounded-div" id = "forma-de-pagamento">
+                    <span id="output-forma-de-pagamento"></span>
+                  </div>
                 </div>
-                <h4>Dt.Ativação:</h4>
-                <div class="rounded-div">
-                  <span id="output-data-ativacao"></span>
+                <div class="input-group">
+                  <h4>Dt.Ativação:</h4>
+                  <div class="rounded-div" id = "data-ativacao">
+                    <span id="output-data-ativacao"></span>
+                  </div>
+                </div>
+                <div class="input-group"> 
+                  <h4>Venc.Antigo:</h4>
+                  <div class="rounded-div" id = "venc-antigo">
+                    <span id="output-venc-antigo"></span>
+                  </div>
                 </div>
 
               </div>
               <div class="container-debito">
+                <div class="input-group"> 
                 <h4>Qt.Parcelas:</h4>
-                <div class="rounded-div">
+                <div class="rounded-div"  id = "total-parcelas">
                   <span id="output-total-parcelas"></span>
                 </div>
+                </div>
+                <div class="input-group"> 
                 <h4>Débito:</h4>
-                <div class="rounded-div">
+                <div class="rounded-div" id = "total-debito">
                   <span id="output-total-debito"></span>
+                </div>
                 </div>
 
 
